Cynthia:  observations not datapoints

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1432,7 +1432,7 @@ the number of observations with the minority label within the set.
 Consider a dataset~${\{(x_n, y_n)\}_{n=1}^N}$ and also a set of antecedents
 ${\{s_m\}_{m=1}^M}$.
 %
-Define distinct datapoints to be equivalent if they are captured by
+Define distinct observations to be equivalent if they are captured by
 exactly the same antecedents, \ie ${x_i \neq x_j}$ are equivalent~if
 \begin{align}
 \frac{1}{M} \sum_{m=1}^M \one [ \Cap(x_i, s_m) = \Cap(x_j, s_m) ] = 1.
