Cynthia:  need to relate e_u and x_i

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1440,6 +1440,8 @@ exactly the same antecedents, \ie ${x_i \neq x_j}$ are equivalent~if
 Notice that we can partition a dataset into sets of equivalent points;
 let~${\{e_u\}_{u=1}^U}$ enumerate these sets.
 %
+Let~$e_u$ be the equivalent points set that contains observation~$x_i$.
+%
 Now define~$\theta(e_u)$ to be the normalized support of the minority
 class label with respect to set~$e_u$, \eg let
 \begin{arxiv}
