Cynthia:  do not

--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -69,7 +69,7 @@ or a custom priority metric.
 \end{kdd}
 %
 In preliminary work (not shown), we also experimented with
-stochastic exploration processes that don't require a queue;
+stochastic exploration processes that do not require a queue;
 instead, these follow random paths from the root to leaves.
 %
 Developing such methods could be an interesting direction for future work.
