--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -80,7 +80,7 @@ Our rule mining procedure yields ${M = 156}$ single- and two-clause antecedents.
 to predict whether a weapon will be found on a stopped individual who is frisked or searched.
 We identify a subset of 29,595 records for stopped individuals who were frisked and/or searched.
 Of these, criminal possession of a weapon was identified in about 5\% of instances,
-thus we resampling due to class imbalance.
+thus we resampled due to class imbalance.
 In the first two subsections below, we use ${M =28}$ single-clause antecedents;
 in the latter two, we add negations of some, yielding ${M =46}$.
 
