Cynthia:  minor edit

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -270,7 +270,7 @@ The upper panels in Figure~\ref{fig:weapon-reg-execution} plot example execution
 from a single cross-validation fold, of both the current best objective value~$\CurrentObj$
 and the lower bound~$b(\Prefix, \x, \y)$ of the prefix~$\Prefix$ being evaluated.
 %
-These plots clearly illustrate that CORELS certifies optimality
+These plots illustrate that CORELS certifies optimality
 when the lower bound matches the objective value.
 %
 The lower panels in Figure~\ref{fig:weapon-reg-execution} plot corresponding traces of
