--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -117,7 +117,7 @@ The panels in Figure~\ref{fig:weapon-reg-execution} plot example execution trace
 from a single cross-validation fold, of both the current best objective value~$\CurrentObj$
 and the lower bound~$b(\Prefix, \x, \y)$ of the prefix~$\Prefix$ being evaluated.
 %
-These plots clearly illustrate that CORELS certifies optimality
+These plots illustrate that CORELS certifies optimality
 when the lower bound matches the objective value.
 %
 For each value of~$\Reg$, CORELS achieves the optimum in a small fraction of the total execution time.
