--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -64,7 +64,7 @@ smaller class with replacement.
 %
 We generate cross-validation folds first, and then resample within each fold.
 %
-In our 10-fold cross-validation experiments, each training set contains 50,743 datapoints.
+In our 10-fold cross-validation experiments, each training set contains 50,743 observations.
 
 Table~\ref{tab:frisk-data} shows the 5 categorical attributes that we use,
 corresponding to a total of 28 values.
