--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -55,14 +55,14 @@ and dramatically overfits for all tested parameters.
 % RIPPER in R's caret
 
 Our experimental analysis addresses four questions:
-(1)~How does CORELS' accuracy and model size compare to other algorithms'?
+(1)~How does CORELS' accuracy and model size compare to that of other algorithms?
 (2)~How rapidly do the objective value and its lower bound converge, for different values of~$\Reg$?
 (3)~How much does each of the implementation optimizations contribute to CORELS' performance?
 (4)~How rapidly does CORELS prune the search space?
 We present additional empirical results and further implementation and data processing details
 in a long version of this report~\citep{AngelinoLaAlSeRu17}.
 
-All timed results were executed on a server with two Intel Xeon E5-2699~v4
+All timed results ran on a server with two Intel Xeon E5-2699~v4
 (55~MB cache, 2.20~GHz) processors and 448~GB RAM.
 %
 Except where we mention a memory constraint, all experiments
