--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -63,7 +63,7 @@ We present additional empirical results and further implementation and data proc
 in a long version of this report~\citep{AngelinoLaAlSeRu17}.
 
 All timed results ran on a server with two Intel Xeon E5-2699~v4
-(55~MB cache, 2.20~GHz) processors and 448~GB RAM.
+(55~MB cache, 2.20~GHz) processors and 756~GB RAM.
 %
 Except where we mention a memory constraint, all experiments
 can run comfortably on smaller machines, \eg a laptop with 16GB~RAM.
@@ -198,13 +198,15 @@ prefixes of a given length in the queue during the algorithm's execution.
  & $t_\text{total}$ & $t_\text{opt}$ & $i_\text{total}$ & $Q_\text{max}$ & $K_\text{max}$ \\
 Algorithm variant & (min) & (s) & ($\times 10^6$) & ($\times 10^6$) & \\
 \hline
-CORELS & 5.5 (1.6) & 8 (2) & 1.7 (0.4) & 1.3 (0.4) & 5-6 \\
-No priority queue (BFS) & 6.7 (2.2) & 4 (1) & 1.9 (0.6) & 1.5 (0.5) & 5-6 \\
-No support bounds & 10.2 (3.4) & 13 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
-No symmetry-aware map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
-No lookahead bound & 71.9 (23.0) & 9 (2) & 18.5 (5.9) & 16.3 (5.3) & 6-7 \\
-%equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
-No equivalent pts bound & $>$134 & $>$7168 & $>$800 & $>$789 & $\ge$10
+CORELS & 5.4 (1.6) & 8 (2) & 1.7 (0.4) & 1.3 (0.4) & 5-6 \\
+BFS priority queue & 6.4 (2.0) & 34 (21) & 3.5 (1.4) & 2.6 (1.2) & 5-6 \\
+No support bounds & 10.0 (3.3) & 12 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
+No symmetry-aware map & 56.8 (22.3) & 21 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
+No lookahead bound & 70.0 (22.0) & 8 (2) & 18.5 (5.9) & 17.1 (5.5) & 6-7 \\
+No equivalent pts bound & $>$87 & $>$3744 & $>$1004 & $>$987 & $\ge$10
+%No equivalent pts bound & 54.5 (44.6) & 2520 (2077) & 602.9 (492.2) & 593.0 (484.2) & 10-11
+%folds that achieve min objective: 7
+%num lower bound evals >= 1843354908
 \end{tabular}
 }
 \vspace{4mm}
@@ -217,7 +219,8 @@ maximum queue size, and maximum evaluated prefix length.
 The first row shows CORELS; subsequent rows show variants
 that each remove a specific implementation optimization or bound.
 %
-We terminated each experiment in the last row after consuming 390-410GB RAM.
+We terminated each experiment in the last row once the size of the
+trie reached ${10^9}$ nodes (each execution consumed $\sim$350GB RAM).
 %
 In all but the final row and column, we report means
 (and standard deviations) over 10 cross-validation folds;
@@ -253,9 +256,9 @@ algorithm optimizations for our prediction problems,
 using the ProPublica (left) and NYCLU (right) datasets.
 %
 On the left, for CORELS (solid lines),
-the objective drops quickly, achieving the optimal value within 10 seconds.
+the objective drops quickly, achieving the optimal value within 10~seconds.
 %
-CORELS certifies optimality in less than 6 minutes:
+CORELS certifies optimality in less than 6~minutes:
 the objective lower bound steadily converges to the optimal objective (top)
 as the search space shrinks (bottom).
 %
@@ -263,7 +266,7 @@ In the same plots, we also show
 a separate execution of CORELS without the equivalent points bound
 (Theorem~\ref{thm:identical}) (dashes).
 %
-After nearly 3 hours, this execution is still far from complete:
+After nearly 3~hours, this execution is still far from complete:
 the lower bound is far from the optimum objective value (top)
 and much of the search space remains unexplored (bottom).
 %
