Revise text around Figure 5 incomplete execution

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -266,7 +266,8 @@ In the same plots, we also show
 a separate execution of CORELS without the equivalent points bound
 (Theorem~\ref{thm:identical}) (dashes).
 %
-After nearly 3~hours, this execution is still far from complete:
+%After nearly 3~hours, this execution is still far from complete:
+This execution is far from complete:
 the lower bound is far from the optimum objective value (top)
 and much of the search space remains unexplored (bottom).
 %
