--- a/paper/sections/implementation-long.tex
+++ b/paper/sections/implementation-long.tex
@@ -35,7 +35,8 @@ Our implementation of CORELS can be found~at: \\
 \label{sec:trie}
 
 Our incremental computations (\S\ref{sec:incremental}) require a
-cache to keep track of rule lists we have already evaluated.
+cache to keep track of prefixes that we have already evaluated
+and are still of interest.
 %
 We implement this cache as a prefix tree, a data structure also known as a trie,
 which allows us to efficiently represent structure shared between related prefixes.
