--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -4,8 +4,8 @@
 \begin{figure}[t!]
 \begin{center}
 % left lower right upper
-\includegraphics[trim={12mm, 11mm, 25mm, 5mm},
-width=0.49\textwidth]{figs/compare-compas-weapon.pdf}
+\includegraphics[trim={8mm, 10mm, 15mm, 5mm},
+width=0.47\textwidth]{figs/compare-compas-weapon.pdf}
 \end{center}
 \caption{Test accuracy means (white squares),
 standard deviations (error bars),
@@ -18,7 +18,7 @@ For CORELS, ${\Reg = 0.005}$ (left) and ${\Reg = 0.01}$ (right).
 \begin{figure}[t!]
 \begin{center}
 % left lower right upper
-\includegraphics[trim={12mm, 7mm, 24mm, 5mm}, width=0.44\textwidth]{figs/compas-sparsity-training.pdf}
+\includegraphics[trim={12mm, 7mm, 24mm, 10mm}, width=0.44\textwidth]{figs/compas-sparsity-training.pdf}
 \includegraphics[trim={15mm, 12mm, 24mm, 1mm}, width=0.44\textwidth]{figs/frisk-sparsity-training-c45.pdf}
 \end{center}
 \caption{Training and test accuracy as a function of model size.
@@ -153,6 +153,7 @@ Bottom right: Overlay of the three traces.
 % left lower right upper
 \includegraphics[trim={30mm 15mm 35mm 5mm}, width=0.45\textwidth]{figs/weapon_execution-remaining-space.pdf}
 \end{center}
+\vspace{-2mm}
 \caption{Significant algorithm optimizations
 for ProPublica (left) and NYCLU (right).
 %
