Minor edit in section on different reg params

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -124,7 +124,7 @@ and the lower bound~$b(\Prefix, \x, \y)$ of the prefix~$\Prefix$ being evaluated
 These plots illustrate that CORELS certifies optimality
 when the lower bound matches the objective value.
 %
-For each value of~$\Reg$, CORELS achieves the optimum in a small fraction of the total execution time.
+In these examples, CORELS achieves the optimum in a small fraction of the total execution time.
 
 \begin{figure}[t!]
 \begin{center}
