Update Laber and Goessling refs from arxiv to published citations

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -55,14 +55,18 @@ title={Cost-sensitive and Interpretable Dynamic Treatment Regimes Based on Rule 
  address = {Hingham, MA, USA}
 }
 
-@article{Goessling2015,
-   author = {M. Goessling and S. Kang},
-    title = {Directional Decision Lists},
-  journal = {Preprint at arXiv:1508.07643},
-     year = {2015},
-    month = aug
+@inproceedings{Goessling2015,
+ __author = {Goessling, Marc and Kang, Shan},
+ author = {M. Goessling and S. Kang},
+ title = {Directional Decision Lists},
+ booktitle = {Proceedings of the 2015 IEEE International Conference on Big Data},
+ series = {BIG DATA '15},
+ year = {2015},
+ pages = {2762--2766},
+ numpages = {5},
+ __publisher = {IEEE Computer Society},
+ __address = {Washington, DC, USA},
 }
-
 
 @article{LethamRuMcMa15,
 __author    = {Benjamin Letham and Cynthia Rudin and Tyler H. McCormick and David Madigan},
@@ -261,9 +265,11 @@ author="S. Ruping",
 journal={},
 year={2006}
 }
-@article{ZhangLaTsDa2015,
+
+@article{ZhangEtAl15,
   title={Using decision lists to construct interpretable and parsimonious treatment regimes},
-  author={Zhang, Yichi and Laber, Eric B and Tsiatis, Anastasios and Davidian, Marie},
+  author = {{Zhang}, Y. and {Laber}, E.~B. and {Tsiatis}, A. and {Davidian}, M.},
+  __author={Zhang, Yichi and Laber, Eric B and Tsiatis, Anastasios and Davidian, Marie},
   journal={Biometrics},
   volume={71},
   number={4},
@@ -357,14 +363,6 @@ journal={Machine Learning},
 note={Accepted with Minor Revision},
 year={2015}
 }
-
-@ARTICLE{ZhangEtAl15,
-   author = {{Zhang}, Y. and {Laber}, E.~B. and {Tsiatis}, A. and {Davidian}, M.},
-    title = {Using Decision Lists to Construct Interpretable and Parsimonious Treatment Regimes},
-  journal = {Preprint at arXiv:1504.07715},
-     year = 2015,
-    month = apr
- }
 
 @INPROCEEDINGS{Auer95theoryand,
     author = {Peter Auer and Robert C. Holte and Wolfgang Maass},
