Nicholas's edit for text about Figure 5

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -592,8 +592,9 @@ See Figure~\ref{fig:queue} for a detailed caption.
 \end{figure}
 
 Finally, Figure~\ref{fig:objective} highlights the most significant
-algorithm optimizations for our prediction problems,
-using the ProPublica (left) and NYCLU (right) datasets.
+algorithm optimizations for our prediction problems:
+the equivalent points bound for the ProPublica dataset (left)
+and the symmetry-aware map for the NYCLU dataset (right).
 %
 For CORELS (solid lines) with the ProPublica recidivism dataset (left),
 the objective drops quickly, achieving the optimal value within 10 seconds.
