--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -254,8 +254,9 @@ For comparison, we replicate the same gray region in all subfigures.
 
 \textit{State space pruning:}
 Figure~\ref{fig:objective} highlights the most significant
-algorithm optimizations for our prediction problems,
-using the ProPublica (left) and NYCLU (right) datasets.
+algorithm optimizations for our prediction problems:
+the equivalent points bound for the ProPublica dataset (left)
+and the symmetry-aware map for the NYCLU dataset (right).
 %
 On the left, for CORELS (solid lines),
 the objective drops quickly, achieving the optimal value within 10~seconds.
