This may or may not help regarding max prefix length 16-17

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -172,7 +172,7 @@ As~$\Reg$ decreases, these times increase because the search problems become mor
 %
 This is summarized by our observation that CORELS must evaluate longer prefixes:
 across 10 cross-validation folds, the maximum evaluated prefix lengths are~6,
-11, and~16 or~17, for ${\Reg = 0.04}$, $0.01$, and $0.025$, respectively.
+11, and~16-17, for ${\Reg = 0.04}$, $0.01$, and $0.025$, respectively.
 %
 As a consequence, our data structures grow in size: \eg
 across 10 cross-validation folds, the mean number of queue elements are
